--- a/packages/sage-assets/lib/stylesheets/components/_toast.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_toast.scss
@@ -70,10 +70,10 @@ $-toast-bottom-spacing: sage-spacing(xs);
   padding-block-start: sage-spacing(xs);
   padding-block-end: sage-spacing(xs);
   padding: 0 sage-spacing(md);
-  color: sage-color(white);
+  color: var(--pine-color-white);
   border-radius: sage-border(radius-medium);
   box-shadow: sage-shadow(lg);
-  background-color: sage-color(grey, 900);
+  background-color: var(--pine-color-grey-900);
   animation: 0.5s ease;
 
   @media #{$-toast-breakpoint-default} {
@@ -94,7 +94,7 @@ $-toast-bottom-spacing: sage-spacing(xs);
   }
 
   &.sage-toast--style-danger {
-    background-color: sage-color(red, 500);
+    background-color: var(--pine-color-danger);
   }
 
   &.sage-toast--dismissed {
@@ -106,7 +106,7 @@ $-toast-bottom-spacing: sage-spacing(xs);
 .sage-toast__icon {
   display: inline-flex;
   margin-inline-end: sage-spacing(xs);
-  color: sage-color(white);
+  color: var(--pine-color-white);
 }
 
 .sage-toast__loader {
@@ -121,7 +121,7 @@ $-toast-bottom-spacing: sage-spacing(xs);
 
   padding: 0;
   margin-inline-end: auto;
-  color: sage-color(white);
+  color: var(--pine-color-white);
 
   @extend %t-sage-body-small-semi;
 }
@@ -134,12 +134,12 @@ $-toast-bottom-spacing: sage-spacing(xs);
   align-items: center;
   margin-inline-start: sage-spacing(sm);
   white-space: nowrap;
-  color: sage-color(white);
+  color: var(--pine-color-white);
   border-radius: sage-border(radius-large);
 
   &:hover,
   &:focus {
-    color: sage-color(white);
+    color: var(--pine-color-white);
   }
 
   &:disabled,
@@ -148,7 +148,7 @@ $-toast-bottom-spacing: sage-spacing(xs);
   }
 
   &.sage-btn--subtle.sage-btn--secondary:not(:focus):hover {
-    color: sage-color(grey, 150);
+    color: var(--pine-color-grey-150);
     background-color: inherit;
 
     &::after {
@@ -161,7 +161,7 @@ $-toast-bottom-spacing: sage-spacing(xs);
   text-decoration: underline;
 
   @include sage-focus-outline($outline-offset-inline: 4px);
-  @include sage-focus-outline--update-color(sage-color(purple, 300));
+  @include sage-focus-outline--update-color(var(--pine-color-purple-600));
 }
 
 @keyframes rotate {
