--- a/docs/lib/sage-frontend/stylesheets/docs/_text.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_text.scss
@@ -8,7 +8,7 @@ code {
   display: inline-block;
   padding: 0 sage-spacing(2xs);
   font-size: 0.9em;
-  background-color: sage-color(grey, 200);
+  background-color: var(--pine-color-border-disabled);
 }
 
 pre {
