--- a/packages/sage-assets/lib/stylesheets/components/_assistant.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_assistant.scss
@@ -8,9 +8,9 @@
 $-assistant-height: $sage-assistant-height;
 $-assistant-branding-height: rem(20px);
 $-assistant-search-height: rem(40px);
-$-assistant-search-bg-color: sage-color(grey, 200);
+$-assistant-search-bg-color: var(--pine-color-grey-200);
 $-assistant-search-bg-opacity: 0.1;
-$-assistant-search-placeholder-color: sage-color(grey, 300);
+$-assistant-search-placeholder-color: var(--pine-color-grey-300);
 $-assistant-search-placeholder-transition: color 0.15s ease-in-out, opacity 0.15s ease-in-out;
 
 
@@ -20,7 +20,7 @@ $-assistant-search-placeholder-transition: color 0.15s ease-in-out, opacity 0.15
   z-index: sage-z-index(nav);
   height: $-assistant-height;
   padding: sage-spacing(xs) sage-spacing();
-  background: sage-color(primary, 500);
+  background: var(--pine-color-blue-900);
 }
 
 .sage-assistant__branding {
