--- a/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
@@ -8,7 +8,7 @@ $-card-highlight-border-radius: sage-border(radius-large);
 $-card-highlight-size: rem(12px);
 
 .sage-card-highlight {
-  --color: #{sage-color(primary, 500)};
+  --color: var(--pine-color-blue-900);
 
   position: absolute;
   background-color: var(--color);
