--- a/packages/sage-assets/lib/stylesheets/components/_expandable_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_expandable_card.scss
@@ -5,8 +5,8 @@
 ////
 
 
-$-expandable-card-bg-color: sage-color(white);
-$-expandable-card-border-color: sage-color(grey, 300);
+$-expandable-card-bg-color: var(--pine-color-white);
+$-expandable-card-border-color: var(--pine-color-grey-300);
 $-expandable-card-border-radius: sage-border(radius);
 $-expandable-card-padding: sage-spacing(sm);
 $-expandable-card-padding-xs: sage-spacing(xs);
