--- a/packages/sage-assets/lib/stylesheets/components/_panel.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_panel.scss
@@ -46,7 +46,7 @@
     top: 50%;
     width: 100%;
     height: 1px;
-    background: sage-color(grey, 200);
+    background: var(--pine-color-grey-200);
   }
 
   &::after {
@@ -54,9 +54,9 @@
     display: inline-block;
     position: relative;
     padding: 0 sage-spacing(sm);
-    color: sage-color(grey, 600);
+    color: var(--pine-color-border-disabled);
     font-size: sage-font-size(body-xs);
-    background-color: sage-color(white);
+    background-color: var(--pine-color-background-container);
   }
 }
 
@@ -98,7 +98,7 @@
 
 .sage-panel__title {
   @extend %t-sage-heading-5;
-  color: sage-color(grey, 950);
+  color: var(--pine-color-text-active);
 
   + .sage-panel__subtext {
     margin-block-start: sage-spacing(xs);
@@ -107,7 +107,7 @@
 
 .sage-panel__subtext {
   grid-column: 1 / -1;
-  color: sage-color(grey, 600);
+  color: var(--pine-color-text-placeholder);
 
   .sage-panel__header & {
     @extend %t-sage-body;
