--- a/packages/sage-assets/lib/stylesheets/components/_sidebar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_sidebar.scss
@@ -5,7 +5,7 @@
 ////
 
 
-$-sidebar-color-background: sage-color(grey, 100);
+$-sidebar-color-background: var(--pine-color-background-container-disabled);
 $-sidebar-breakpoint: sage-breakpoint(md-min);
 $-sidebar-top-offset: $sage-assistant-height;
 
