--- a/packages/sage-assets/lib/stylesheets/components/_status_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_status_icon.scss
@@ -11,7 +11,7 @@
   display: inline-flex;
   align-items: baseline;
   position: relative;
-  color: sage-color(grey, 700);
+  color: var(--pine-color-readonly);
   transition: color map-get($sage-transitions, default), background-color map-get($sage-transitions, default);
   cursor: help;
 
@@ -20,15 +20,15 @@
     $outline-offset-block: 4px,
     $outline-border-radius: sage-border(radius-round),
   );
-  @include sage-focus-outline--update-color(sage-color(purple, 300));
+  @include sage-focus-outline--update-color(var(--pine-color-purple-600));
 
   &:hover:not(:focus):not(:active) {
-    color: sage-color(grey, 900);
+    color: var(--pine-color-text);
   }
 
   &:focus,
   &:active {
-    color: sage-color(grey, 700);
+    color: var(--pine-color-text-placeholder);
   }
 
   .sage-sortable__item & {
