--- a/packages/sage-assets/lib/stylesheets/components/_upload_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_upload_card.scss
@@ -7,14 +7,14 @@
 
 $-upload-card-border-radius: sage-border(radius-large);
 $-upload-card-border-width: 2;
-$-upload-card-error-color: sage-color(red, 500);
+$-upload-card-error-color: var(--pine-color-danger);
 $-upload-card-body-width: rem(200px);
 $-upload-card-body-width-stack: rem(340px);
 $-upload-card-preview-border-radius: sage-border(radius-medium);
 $-upload-card-preview-width: rem(32px);
 $-upload-card-preview-max-width: rem(190px);
 $-upload-card-preview-max-width-stack: rem(292px);
-$-upload-card-background: sage-color(white);
+$-upload-card-background: var(--pine-color-background-container);
 $-upload-card-mobile-breakpoint: 609px;
 
 :root {
@@ -29,10 +29,10 @@ $-upload-card-mobile-breakpoint: 609px;
   justify-content: flex-start;
   flex: 1 1;
   gap: sage-spacing();
-  color: sage-color(grey, 700);
+  color: var(--pine-color-text-readonly);
 
   .sage-upload-card--selected & {
-    color: sage-color(grey, 800);
+    color: var(--pine-color-text-message);
   }
 
   .sage-upload-card--error & {
@@ -100,7 +100,7 @@ $-upload-card-mobile-breakpoint: 609px;
 
 .sage-upload-card__icon {
   display: inline-flex;
-  color: sage-color(grey, 600);
+  color: var(--pine-color-text-placeholder);
 
   .sage-upload-card:not(.sage-uploaded-card--selected) & {
     margin-block-end: sage-spacing(2xs);
@@ -143,5 +143,5 @@ $-upload-card-mobile-breakpoint: 609px;
   flex-direction: column;
   align-items: flex-start;
   gap: sage-spacing(sm);
-  color: sage-color(grey, 700);
+  color: var(--pine-color-text-readonly);
 }
