--- a/packages/sage-assets/lib/stylesheets/core/_typography.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_typography.scss
@@ -197,10 +197,10 @@ body:not(.sage-excluded),
   // Hyperlinks get some default coloring applied
   > a:not([class]),
   > a[class*="sage-link"] {
-    color: sage-color(primary, 300);
+    color: var(--pine-color-primary);
 
     &:hover {
-      color: sage-color(primary, 400);
+      color: var(--pine-color-primary-hover);
     }
   }
 
@@ -285,7 +285,7 @@ body:not(.sage-excluded),
 }
 
 .t-sage--underline-dotted {
-  text-decoration-color: sage-color(grey, 600);
+  text-decoration-color: var(--pine-color-grey-600);
   text-decoration-line: underline;
   text-decoration-style: dotted;
   text-decoration-thickness: 12%;
