--- a/packages/sage-assets/lib/stylesheets/layout/_content.scss
+++ b/packages/sage-assets/lib/stylesheets/layout/_content.scss
@@ -6,8 +6,10 @@
 
 
 .sage-content {
+  background-color: var(--pine-color-background-container);
   flex: 1;
   overflow: auto;
+
 
   // Ladera Integration Note:
   // X-padding of 32px (`sage-spacing(lg)`) matches Ladera's `.content` wrapper padding value of `$spacing-outer`
