--- a/packages/sage-assets/lib/stylesheets/tokens/_ds_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_ds_tokens.scss
@@ -24,7 +24,7 @@
 // Import ds-tokens CSS (provides all CSS variables in :root)
 // Note: ds-tokens outputs CSS files, not SCSS
 // Using relative path from node_modules (compatible with both sass-loader and postcss-loader)
-@import '@kajabi-ui/styles/dist/kajabi_products/kajabi_products.css';
+@import "@kajabi-ui/styles/dist/kajabi_products/kajabi_products.css";
 
 // Import dark mode color token overrides
 // This provides dark mode support via @media (prefers-color-scheme: dark)
