fix: color update

--- a/packages/sage-assets/lib/stylesheets/tokens/_ds_tokens_dark_mode.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_ds_tokens_dark_mode.scss
@@ -33,8 +33,8 @@
     --pine-color-border-danger: var(--pine-color-red-500);
 
     // Primary Colors (semantic)
-    --pine-color-primary: var(--pine-color-white);
-    --pine-color-primary-hover: var(--pine-color-grey-100);
+    --pine-color-primary: var(--pine-color-grey-900);
+    --pine-color-primary-hover: var(--pine-color-grey-950);
     --pine-color-primary-disabled: var(--pine-color-grey-500);
 
     // Secondary Colors
